@@ -1,12 +1,19 @@
 package se.iths.nextdeparturesl.service;
 
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import se.iths.nextdeparturesl.model.CalendarDate;
 import se.iths.nextdeparturesl.model.Route;
 import se.iths.nextdeparturesl.model.StopTime;
 import se.iths.nextdeparturesl.model.Trip;
+import se.iths.nextdeparturesl.util.GtfsFileHandler;
+import se.iths.nextdeparturesl.util.MapCreator;
 
+import java.io.File;
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -17,88 +24,88 @@ class GtfsDataHolderTest {
 
     @BeforeEach
     void setUp() {
-        String gtfsRootFolderPath = getClass().getClassLoader().getResource("GTFS_SL_TEST/").getPath();
-        gtfsDataHolder = new GtfsDataHolder(gtfsRootFolderPath);
+        File gtfsRootFolderPath = new File(getClass().getClassLoader().getResource("2025-08-18-sl.zip").getFile());
+        GtfsFileHandler fileHandler = new GtfsFileHandler(gtfsRootFolderPath);
+        MapCreator creator = new MapCreator();
+        creator.setFileHandler(fileHandler);
+
+        gtfsDataHolder = GtfsDataHolder.getInstance();
+        gtfsDataHolder.setStationList(creator.getStopNameList());
+        gtfsDataHolder.setStopIdToStopTimes(creator.createStopTimeMapWithStopId());
+        gtfsDataHolder.setTripIdToTrips(creator.createTripMapWithTripId());
+        gtfsDataHolder.setRouteIdToRoutes(creator.createRouteMapWithRouteId());
+        gtfsDataHolder.setServiceIdToCalendarDates(creator.createCalendarDateMapWithServiceId());
+        gtfsDataHolder.setStopNameToStopId(creator.createStopIdMapWithStopName());
+        gtfsDataHolder.setServiceIdToTripId(creator.createTripIdListMapWithServiceId());
     }
 
-    @Test
-    void createStopTimeMapWithStopId_notEmpty_shouldReturnStopTimes() {
-        Map<String, List<StopTime>> map = gtfsDataHolder.createStopTimeMapWithStopId();
-
-        assertFalse(map.isEmpty());
-
-        assertEquals(2, map.size());
-    }
-
-    @Test
-    void createTripMapWithTripId() {
-        Map<String, Trip> map = gtfsDataHolder.createTripMapWithTripId();
-        assertFalse(map.isEmpty());
-        assertEquals(31, map.size());
-    }
-
-    @Test
-    void createRouteMapWithRouteId() {
-        Map<String, Route> map = gtfsDataHolder.createRouteMapWithRouteId();
-        assertFalse(map.isEmpty());
-        assertEquals(2, map.size());
-    }
-
-    @Test
-    void createCalendarDateMapWithServiceId() {
-        Map<String, List<CalendarDate>> map = gtfsDataHolder.createCalendarDateMapWithServiceId();
-        assertFalse(map.isEmpty());
-        assertEquals(10, map.size());
-    }
-
-    @Test
-    void createStopIdMapWithStopName() {
-        Map<String, List<String>> map = gtfsDataHolder.createStopIdMapWithStopName();
-        assertFalse(map.isEmpty());
-        assertEquals(5, map.size());
-        assertEquals(map.get("Stavsnäs"), List.of("9022001000101001"));
-    }
-
-    @Test
-    void createTripIdListMapWithServiceId() {
-        Map<String, List<String>> map = gtfsDataHolder.createTripIdListMapWithServiceId();
-
-        assertFalse(map.isEmpty());
-        assertEquals(10, map.size());
+    @AfterEach
+    void tearDown() {
+        gtfsDataHolder.setStationList(Collections.emptyList());
+        gtfsDataHolder.setRouteIdToRoutes(Collections.emptyMap());
+        gtfsDataHolder.setTripIdToTrips(Collections.emptyMap());
+        gtfsDataHolder.setServiceIdToCalendarDates(Collections.emptyMap());
+        gtfsDataHolder.setServiceIdToTripId(Collections.emptyMap());
+        gtfsDataHolder.setStopIdToStopTimes(Collections.emptyMap());
+        gtfsDataHolder.setStopNameToStopId(Collections.emptyMap());
     }
 
     @Test
     void getStationList() {
-        assertNull(gtfsDataHolder.getStationList());
+        List<String> stations = gtfsDataHolder.getStationList();
+        assertNotNull(stations);
+        assertFalse(stations.isEmpty());
+        assertEquals(6, stations.size());
+
     }
 
     @Test
-    void getStopIdTostopTimes() {
-        assertNull(gtfsDataHolder.getStopIdToStopTimes());
+    void getStopIdToStopTimes() {
+        Map<String, List<StopTime>> map = gtfsDataHolder.getStopIdToStopTimes();
+        assertFalse(map.isEmpty());
+        assertEquals(2, map.size());
+        assertNotNull(map);
     }
 
     @Test
     void getStopNameToStopId() {
-        assertNull(gtfsDataHolder.getStopNameToStopId());
+        Map<String, List<String>> map = gtfsDataHolder.getStopNameToStopId();
+        assertFalse(map.isEmpty());
+        assertEquals(6, map.size());
+        assertEquals(map.get("Stavsnäs"), List.of("9022001000101001"));
+        assertNotNull(map);
     }
 
     @Test
     void getServiceIdToTripId() {
-        assertNull(gtfsDataHolder.getServiceIdToTripId());
+        Map<String, List<String>> map = gtfsDataHolder.getServiceIdToTripId();
+        assertFalse(map.isEmpty());
+        assertEquals(11, map.size());
+        assertNotNull(map);
     }
 
     @Test
     void getCalendarDates() {
-        assertNull(gtfsDataHolder.getServiceIdToCalendarDates());
+        Map<String, List<CalendarDate>> map = gtfsDataHolder.getServiceIdToCalendarDates();
+        assertFalse(map.isEmpty());
+        assertEquals(11, map.size());
+        assertNotNull(map);
     }
 
     @Test
     void getRoutes() {
-        assertNull(gtfsDataHolder.getRouteIdToRoutes());
+        Map<String, Route> map = gtfsDataHolder.getRouteIdToRoutes();
+        assertFalse(map.isEmpty());
+        assertEquals(3, map.size());
+        assertNotNull(map);
     }
 
     @Test
-    void getTripIdTotrips() {
-        assertNull(gtfsDataHolder.getTripIdToTrips());
+    void getTripIdToTrips() {
+        Map<String, Trip> map = gtfsDataHolder.getTripIdToTrips();
+        assertFalse(map.isEmpty());
+        assertEquals(32, map.size());
+        assertNotNull(map);
+        assertNotNull(map);
     }
 }
